--- a/style.css
+++ b/style.css
@@ -38,20 +38,20 @@ ul {
 }
 
 .btn {
+  font-family: "Spartan", sans-serif;
   font-size: 32px;
-  background-color: white;
-  color: #281c24;
-  border: 1px solid #281c24;
+  border-radius: 8px;
+  background-color: #281c24;
+  color: white;
+  border: 1px solid white;
   padding: 10px 30px;
 }
 
 .btn:hover {
   transition-duration: 0.6s;
-  font-size: 32px;
-  background-color: #281c24;
-  color: white;
-  border: 1px solid white;
-  padding: 10px 30px;
+  background-color: white;
+  color: #281c24;
+  border: 1px solid #281c24;
 }
 
 /***! Socials ***/
