--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ body {
   align-items: center;
 }
 
+.text404 {
+  font-size: 32px;
+}
+
 .name {
   font-size: 128px;
 }
@@ -38,6 +42,7 @@ ul {
 }
 
 .btn {
+  text-align: center;
   font-family: "Spartan", sans-serif;
   font-size: 32px;
   border-radius: 8px;
